--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -10,7 +10,7 @@
 			border: none;
 			padding: 20px 20px;
 			font-family: Verdana;
-			font-size: 15px;
+			font-size: 12px;
 			transform: translate(-50%, -50%)
 		}
 
@@ -33,12 +33,33 @@
 <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
 <script type="text/babel">
+	
+	function fetchBasics(nodenum){
+		var req = new XMLHttpRequest;
+		req.open("GET", "/basics?nodenum=" + nodenum)
+		req.send()
+			
+		req.onreadystatechange = function(){
+			if (this.readyState == 4 && this.status == 200){
+				var text = req.responseText
+				var daqpulse = text.split(",")[0]
+				var synctime = text.split(",")[1]
+				var text = "<br></br>DAQPULSE " + daqpulse + "<br></br>" + "SYNCTIME " + synctime
+				document.getElementById(nodenum + "_basics").innerHTML = text
+			}
+		}
+	}
+	
 	class Panel extends React.Component {
 		render() {
 			return (
-				<button className="genericpanel" id={"seti-node" + this.props.node/10 + "/" + this.props.node % 10}  style={{position: this.props.position, top: this.props.top + "%", left: this.props.left + "%", backgroundColor: this.props.color}}>
-					seti-node{Math.floor(this.props.node/10)}/{this.props.node%10}
+				<form action="/node">
+				<button className="genericpanel" id={"seti-node" + this.props.nodenum/10 + "/" + this.props.nodenum % 10}  style={{position: this.props.position, top: this.props.top + "%", left: this.props.left + "%", backgroundColor: this.props.color, fontFamily: 'Courier', textAlign: 'left'}}>
+					seti-node{Math.floor(this.props.nodenum/10)}/{this.props.nodenum%10}
+					<span id={this.props.nodenum + "_basics"}></span>
 				</button>
+				<input type="hidden" name="nodenum" value={this.props.nodenum}></input>
+				</form>
 			);
 		}
 	}
@@ -47,17 +68,17 @@
 		render(){
 			return (
 				<React.Fragment>
-					<Panel node={10} top={30} left={25} position={"fixed"} color={"#456789"}/>
-					<Panel node={11} top={30} left={35} position={"fixed"} color={"#987654"}/>
+					<Panel nodenum={10} top={30} left={10} position={"fixed"} color={"#456789"}/>
+					<Panel nodenum={20} top={30} left={36.66} position={"fixed"} color={"#987654"}/>
 
-					<Panel node={20} top={30} left={65} position={"fixed"} color={"#456789"}/>
-					<Panel node={21} top={30} left={75} position={"fixed"} color={"#987654"}/>
+					<Panel nodenum={30} top={30} left={63.33} position={"fixed"} color={"#456789"}/>
+					<Panel nodenum={40} top={30} left={90} position={"fixed"} color={"#987654"}/>
 
-					<Panel node={30} top={60} left={25} position={"fixed"} color={"#456789"}/>
-					<Panel node={31} top={60} left={35} position={"fixed"} color={"#987654"}/>
+					<Panel nodenum={11} top={70} left={10} position={"fixed"} color={"#456789"}/>
+					<Panel nodenum={21} top={70} left={36.66} position={"fixed"} color={"#987654"}/>
 
-					<Panel node={40} top={60} left={65} position={"fixed"} color={"#456789"}/>
-					<Panel node={41} top={60} left={75} position={"fixed"} color={"#987654"}/>
+					<Panel nodenum={31} top={70} left={63.66} position={"fixed"} color={"#456789"}/>
+					<Panel nodenum={41} top={70} left={90} position={"fixed"} color={"#987654"}/>
 				</React.Fragment>
 			);
 		}
@@ -65,6 +86,18 @@
 
 
 	ReactDOM.render(<Page />, document.getElementById('root'))	
+
+	
+	var nodenumlist = [10, 11, 20, 21, 30, 31, 40, 41]
+
+	setInterval(function(){ fetchBasics(10)}, 100)
+	setInterval(function(){ fetchBasics(11)}, 100)
+	setInterval(function(){ fetchBasics(20)}, 100)
+	setInterval(function(){ fetchBasics(21)}, 100)
+	setInterval(function(){ fetchBasics(30)}, 100)
+	setInterval(function(){ fetchBasics(31)}, 100)
+	setInterval(function(){ fetchBasics(40)}, 100)
+	setInterval(function(){ fetchBasics(41)}, 100)
 
 </script>
 </html>
