--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -35,9 +35,9 @@
 <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
 <script type="text/babel">
 	
-	function fetchBasics(nodenum){
+	function fetchBasics(nodenum, instancenum){
 		var req = new XMLHttpRequest;
-		req.open("GET", "/basics?nodenum=" + nodenum)
+		req.open("GET", "/basics?nodenum=" + nodenum + "&instancenum=" + instancenum)
 		req.send()
 			
 		req.onreadystatechange = function(){
@@ -68,7 +68,7 @@
 				text += "PPSTATUS " + ppstatus + "<br></br>"
 				text += "POSTPROC " + postproc + "<br></br>"
 				text += "OBSINFO&nbsp;&nbsp;" + obsinfo
-				document.getElementById(nodenum + "_basics").innerHTML = text
+				document.getElementById(nodenum + "_" + instancenum + "_basics").innerHTML = text
 			}
 		}
 	}
@@ -76,13 +76,12 @@
 	class Panel extends React.Component {
 		render() {
 			return (
-				<form action="/node">
-				<button className="genericpanel" id={"seti-node" + this.props.nodenum/10 + "/" + this.props.nodenum % 10}  style={{position: this.props.position, top: this.props.top + "%", left: this.props.left + "%", backgroundColor: this.props.color, fontFamily: 'Courier', textAlign: 'left', lineHeight: "7px"}}>
-					<b>seti-node{Math.floor(this.props.nodenum/10)}/{this.props.nodenum%10}</b>
-					<span id={this.props.nodenum + "_basics"}></span>
-				</button>
-				<input type="hidden" name="nodenum" value={this.props.nodenum}></input>
-				</form>
+				<a href={"/node?nodenum="+this.props.nodenum+"&instancenum="+this.props.instancenum}>
+					<div className="genericpanel" id={"seti-node" + this.props.nodenum + "/" + this.props.instancenum}  style={{position: this.props.position, top: this.props.top + "%", left: this.props.left + "%", backgroundColor: this.props.color, fontFamily: 'Courier', textAlign: 'left', lineHeight: "7px"}}>
+						<b>seti-node{Math.floor(this.props.nodenum)}/{this.props.instancenum}</b>
+						<span id={this.props.nodenum + "_" + this.props.instancenum+"_basics"}></span>
+					</div>
+				</a>
 			);
 		}
 	}
@@ -91,17 +90,17 @@
 		render(){
 			return (
 				<React.Fragment>
-					<Panel nodenum={10} top={30} left={15} position={"fixed"} color={"#456789"}/>
-					<Panel nodenum={20} top={30} left={36.66} position={"fixed"} color={"#987654"}/>
+					<Panel nodenum={1} instancenum={0} top={30} left={15} position={"fixed"} color={"#456789"}/>
+					<Panel nodenum={2} instancenum={0} top={30} left={36.66} position={"fixed"} color={"#987654"}/>
 
-					<Panel nodenum={30} top={30} left={63.33} position={"fixed"} color={"#456789"}/>
-					<Panel nodenum={40} top={30} left={85} position={"fixed"} color={"#987654"}/>
+					<Panel nodenum={3} instancenum={0} top={30} left={63.33} position={"fixed"} color={"#456789"}/>
+					<Panel nodenum={4} instancenum={0} top={30} left={85} position={"fixed"} color={"#987654"}/>
 
-					<Panel nodenum={11} top={70} left={15} position={"fixed"} color={"#456789"}/>
-					<Panel nodenum={21} top={70} left={36.66} position={"fixed"} color={"#987654"}/>
+					<Panel nodenum={1} instancenum={1} top={70} left={15} position={"fixed"} color={"#456789"}/>
+					<Panel nodenum={2} instancenum={1} top={70} left={36.66} position={"fixed"} color={"#987654"}/>
 
-					<Panel nodenum={31} top={70} left={63.66} position={"fixed"} color={"#456789"}/>
-					<Panel nodenum={41} top={70} left={85} position={"fixed"} color={"#987654"}/>
+					<Panel nodenum={3} instancenum={1} top={70} left={63.66} position={"fixed"} color={"#456789"}/>
+					<Panel nodenum={4} instancenum={1} top={70} left={85} position={"fixed"} color={"#987654"}/>
 				</React.Fragment>
 			);
 		}
@@ -110,17 +109,14 @@
 
 	ReactDOM.render(<Page />, document.getElementById('root'))	
 
-	
-	var nodenumlist = [10, 11, 20, 21, 30, 31, 40, 41]
-
-	setInterval(function(){ fetchBasics(10)}, 100)
-	setInterval(function(){ fetchBasics(11)}, 100)
-	setInterval(function(){ fetchBasics(20)}, 100)
-	setInterval(function(){ fetchBasics(21)}, 100)
-	setInterval(function(){ fetchBasics(30)}, 100)
-	setInterval(function(){ fetchBasics(31)}, 100)
-	setInterval(function(){ fetchBasics(40)}, 100)
-	setInterval(function(){ fetchBasics(41)}, 100)
+	setInterval(function(){ fetchBasics(1, 0)}, 100)
+	setInterval(function(){ fetchBasics(1, 1)}, 100)
+	setInterval(function(){ fetchBasics(2, 0)}, 100)
+	setInterval(function(){ fetchBasics(2, 1)}, 100)
+	setInterval(function(){ fetchBasics(3, 0)}, 100)
+	setInterval(function(){ fetchBasics(3, 1)}, 100)
+	setInterval(function(){ fetchBasics(4, 0)}, 100)
+	setInterval(function(){ fetchBasics(4, 1)}, 100)
 
 
 	setInterval(function(){
