--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -36,28 +36,28 @@
 <script type="text/babel">
 	
 	function fetchBasics(nodenum, instancenum){
-		var req = new XMLHttpRequest;
+		let req = new XMLHttpRequest;
 		req.open("GET", "/basics?nodenum=" + nodenum + "&instancenum=" + instancenum)
 		req.send()
 			
 		req.onreadystatechange = function(){
 			if (this.readyState == 4 && this.status == 200){
-				var text = req.responseText.replace("[", "").replace("]", "")
+				let text = req.responseText.replace("[", "").replace("]", "")
 				text = text.replaceAll('null', '"null"')
 
-				var spl = text.split('","')
-				var daqpulse = spl[0].replace('"', '')
-				var synctime = spl[1]
-				var daqstate = spl[2]
-				var physgbps = spl[3]
-				var ibvgbps  = spl[4]
-				var antnames = spl[5]
-				var obsndrop = spl[6].replace('"', '')
-				var ppstatus = spl[7]
-				var postproc = spl[8].replace('"', '')
-				var obsinfo = spl[9].replace('"', '')
+				let spl = text.split('","')
+				let daqpulse = spl[0].replace('"', '')
+				let synctime = spl[1]
+				let daqstate = spl[2]
+				let physgbps = spl[3]
+				let ibvgbps  = spl[4]
+				let antnames = spl[5]
+				let obsndrop = spl[6].replace('"', '')
+				let ppstatus = spl[7]
+				let postproc = spl[8].replace('"', '')
+				let obsinfo = spl[9].replace('"', '')
 
-				var text = "<br></br>"
+				text = "<br></br>"
 				text += "DAQPULSE " + daqpulse + "<br></br>"
 				text += "SYNCTIME " + synctime + "<br></br>"
 				text += "DAQSTATE " + daqstate + "<br></br>"
@@ -74,29 +74,36 @@
 	}
 	
 	class Panel extends React.Component {
+		componentDidMount() {
+			let nodenum = this.props.nodenum;
+			let instancenum = this.props.instancenum;
+			this.fetchBasicsTimer = setInterval(function(){fetchBasics(nodenum, instancenum)}, 500)
+		}
+
+		componentWillUnMount() {
+			clearInterval(this.timer);
+		}
+
 		render() {
 			return (
 				<a href={"/node?nodenum="+this.props.nodenum+"&instancenum="+this.props.instancenum}>
 					<div className="genericpanel" id={"seti-node" + this.props.nodenum + "/" + this.props.instancenum}  style={{position: this.props.position, top: this.props.top + "%", left: this.props.left + "%", backgroundColor: this.props.color, fontFamily: 'Courier', textAlign: 'left', lineHeight: "7px"}}>
 						<b>seti-node{Math.floor(this.props.nodenum)}/{this.props.instancenum}</b>
-						<span id={this.props.nodenum + "_" + this.props.instancenum+"_basics"}></span>
+						<span id={this.props.nodenum + "_" + this.props.instancenum + "_basics"}></span>
 					</div>
 				</a>
 			);
 		}
 	}
 
-	class Page extends React.Component {
+	class PanelRow extends React.Component {
 		render(){
 			return (
 				<React.Fragment>
-					{this.props.nodeinstances.map(
-						(nodeinstance, index) => {
-							var nodenum = nodeinstance.nodenum;
-							var instancenum = nodeinstance.instancenum;
-							console.log(index, nodeinstance, this.props.rowtops[instancenum], this.props.collefts[nodenum-1], this.props.rowcolors[instancenum]);
-							setInterval(function(){ fetchBasics(nodenum,instancenum)}, 100)
-							return <Panel nodenum={nodenum} instancenum={instancenum} top={this.props.rowtops[instancenum]} left={this.props.collefts[nodenum-1]} position={"fixed"} color={this.props.rowcolors[instancenum]}/>
+					{this.props.nodenums.map(
+						(nodenum, index) => {
+							console.log(index, this.props.rowtops[this.props.instancenum], this.props.collefts[(nodenum-1)%4], this.props.rowcolors[this.props.instancenum]);
+							return <Panel key={"Panel_" + nodenum + "_" + this.props.instancenum} nodenum={nodenum} instancenum={this.props.instancenum} top={this.props.rowtops[this.props.instancenum]} left={this.props.collefts[(nodenum-1)%4]} position={"fixed"} color={this.props.rowcolors[this.props.instancenum]}/>
 						}
 					)}
 				</React.Fragment>
@@ -104,18 +111,33 @@
 		}
 	}
 
+	class Page extends React.Component {
+		render(){
+			return (
+				<React.Fragment>{
+					this.props.instance_nodenums.map((instance_nodenums, instancenum) =>{
+						return <PanelRow 
+							key={"PanelRow_" + instancenum}
+							instancenum={instancenum}
+							nodenums={instance_nodenums} 
+							collefts={this.props.collefts}
+							rowtops={this.props.rowtops}
+							rowcolors={this.props.rowcolors}
+						/>
+					})
+				}
+				</React.Fragment>
+			);
+		}
+	}
 
+	let instance_nodenums= [
+				[5,6,7,8],
+				[5,6,7,8],
+			]
+	
 	ReactDOM.render(<Page 
-			nodeinstances={[
-				{"nodenum":1, "instancenum":0},
-				{"nodenum":1, "instancenum":1},
-				{"nodenum":2, "instancenum":0},
-				{"nodenum":2, "instancenum":1},
-				{"nodenum":3, "instancenum":0},
-				{"nodenum":3, "instancenum":1},
-				{"nodenum":4, "instancenum":0},
-				{"nodenum":4, "instancenum":1},
-			]}
+			instance_nodenums={instance_nodenums}
 			collefts={[15, 36.66, 63.66, 85]}
 			rowtops={[30, 70]}
 			rowcolors={["#456789", "#987654"]}
