--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -44,41 +44,34 @@
 <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
 <script type="text/babel">
 	
-	function fetchBasics(nodenum, instancenum){
+	function fetchBasicsCallback(nodenum, instancenum, callbackFunc){
 		let req = new XMLHttpRequest;
 		req.open("GET", "/basics?nodenum=" + nodenum + "&instancenum=" + instancenum)
 		req.send()
-			
+		
 		req.onreadystatechange = function(){
+			let keyvalues = null;
 			if (this.readyState == 4 && this.status == 200){
 				let text = req.responseText.replace("[", "").replace("]", "")
 				text = text.replaceAll('null', '"null"')
 
 				let spl = text.split('","')
-				let daqpulse = spl[0].replace('"', '')
-				let synctime = spl[1]
-				let daqstate = spl[2]
-				let physgbps = spl[3]
-				let ibvgbps  = spl[4]
-				let antnames = spl[5]
-				let obsndrop = spl[6].replace('"', '')
-				let ppstatus = spl[7]
-				let postproc = spl[8].replace('"', '')
-				let obsinfo = spl[9].replace('"', '')
 
-				text = "<br></br>"
-				text += "DAQPULSE " + daqpulse + "<br></br>"
-				text += "SYNCTIME " + synctime + "<br></br>"
-				text += "DAQSTATE " + daqstate + "<br></br>"
-				text += "PHYSGBPS " + physgbps + "<br></br>"
-				text += "IBVGBPS&nbsp;&nbsp;" + ibvgbps  + "<br></br>"
-				text += "ANTNAMES " + antnames + "<br></br>"
-				text += "OBSNDROP " + obsndrop + "<br></br>"
-				text += "PPSTATUS " + ppstatus + "<br></br>"
-				text += "POSTPROC " + postproc + "<br></br>"
-				text += "OBSINFO&nbsp;&nbsp;" + obsinfo
-				document.getElementById(nodenum + "_" + instancenum + "_basics").innerHTML = text
+				keyvalues =
+				{
+					DAQPULSE: spl[0].replace('"', ''),
+					SYNCTIME: spl[1],
+					DAQSTATE: spl[2],
+					PHYSGBPS: spl[3],
+					IBVGBPS:  spl[4],
+					ANTNAMES: spl[5],
+					OBSNDROP: spl[6].replace('"', ''),
+					PPSTATUS: spl[7],
+					POSTPROC: spl[8].replace('"', ''),
+					OBSINFO:  spl[9].replace('"', '')
+				}
 			}
+			callbackFunc(keyvalues);
 		}
 	}
 	
@@ -86,7 +79,17 @@
 		componentDidMount() {
 			let nodenum = this.props.nodenum;
 			let instancenum = this.props.instancenum;
-			this.fetchBasicsTimer = setInterval(function(){fetchBasics(nodenum, instancenum)}, 500)
+			this.fetchBasicsTimer = setInterval(function(){fetchBasicsCallback(
+				nodenum,
+				instancenum, 
+				(keyvalues) => {
+					let text = "<br></br>"
+					for (let key in keyvalues){
+						text += key.padEnd(10) + keyvalues[key] + "<br></br>" 
+					}
+					document.getElementById(nodenum + "_" + instancenum + "_basics").innerHTML = text
+				}
+			)}, 500)
 		}
 
 		componentWillUnMount() {
