--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -8,6 +8,7 @@
 			background-color: #123456;
 			display: flex;
 			flex-direction: column;
+			justify-content: space-evenly;
 			position: absolute;
 			min-width: 100%;
 			min-height: 100%;
@@ -17,20 +18,19 @@
 		.instancespanel{
 			display: flex;
 			/* flex-direction: column; */
-			justify-content: space-around;
+			justify-content: space-evenly;
 		}
 
 		.genericpanel {
 			color: #FFFFFF;
 			width: 300px;
-			min-height: 200px;
+			min-height: 112px;
 			border-radius: 5px;
-			margin: 10px;
-			padding: 20px 20px;
+			margin: 5px;
+			padding: 5px;
 			font-family: 'Courier';
 			font-size: 14px;
 			text-align: 'left';
-			line-height: 50%;
 		}
 		.genericpanel:hover{
 			filter: brightness(115%);
@@ -45,13 +45,6 @@
 		}
 		.keyvalue {
 			display: flex;
-			font-family: 'Courier';
-			font-size: 14px;
-			text-align: 'left';
-			line-height: 100%;
-			
-			margin: 3px 0px 4px;
-			padding: 2px;
 		}
 		.key {
 			min-width: 9ch;
@@ -114,6 +107,7 @@
 						}}
 					>
 						<b>seti-node{Math.floor(this.props.nodenum)}/{this.props.instancenum}</b>
+						<div style={{height: "10px"}}></div>
 						<div className="keyvalues" id={this.props.nodenum + "_" + this.props.instancenum + "_basics"}>
 							<React.Fragment>
 								{
