--- a/public/templates/node.html
+++ b/public/templates/node.html
@@ -4,44 +4,7 @@
 			ATA Pipeline Monitor
 		</title>
 	</head>
-
-	<style>
-		body {
-			background-color: #222;
-		}
-
-		.keyvalues {
-			display: flex;
-			flex-wrap: wrap;
-			padding: 0px 2px 4px;
-			font-size: 18px;
-		}
-		.keyvalue:nth-child(odd) {
-			color: #888;
-		}
-		.keyvalue:nth-child(even){
-			color: #bbb;
-		}
-
-		.keyvalue {
-			font-family: Courier;
-			display: flex;
-			margin: 1px 5px
-			
-		}
-		.key {
-			width: 14ch;
-		}
-		.value {
-			text-align: 'left';
-			width: 30ch;
-			word-wrap: break-word;
-		}
-
-		input[type=Submit]:hover{
-			filter: brightness(150%);
-		}
-	</style>
+	<link href = "./templates/node.css" rel = "stylesheet" type="text/css">
 
 	<body style="display: flex; flex-direction: column;">
 		<div style="margin: 10px;">
